// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputFeedback can have a feedback state 1`] = `
<div
  className="sc-beqWaB hjHWHa sc-gueYoa jTWAqr sc-gueYoa jTWAqr"
  role={null}
>
  Some feedback text.
</div>
`;

exports[`InputFeedback can have a feedback state 2`] = `
<div
  className="sc-beqWaB hjHWHa sc-gueYoa eNRbUU sc-gueYoa eNRbUU"
  role={null}
>
  Some feedback text.
</div>
`;

exports[`InputFeedback renders 1`] = `
<div
  class="sc-beqWaB hjHWHa sc-gueYoa jTWAqr sc-gueYoa jTWAqr"
>
  Some inputFeedback text.
</div>
`;
